# Fazi

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  MACOS_NOTES.md  MANUAL_TESTS.md  ROADMAP.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: fuzzy_bench.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: fuzzy.rs  listing.rs  macos.rs  menu.rs  mod.rs  ops.rs  search.rs  watch.rs
src-tauri/src/core/: archive.rs  batch_rename.rs  copier.rs  entry.rs  journal.rs  mod.rs  op_queue.rs  tags.rs  undo.rs  verify.rs  walker.rs  watcher.rs
src-tauri/src/macos/: icloud.rs  icons.rs  main_thread.rs  menu.rs  mod.rs  pasteboard.rs  share.rs  thumbnails.rs  trash.rs  volumes.rs  workspace.rs
src-tauri/src/protocols/: mod.rs
src-tauri/src/search/: fuzzy.rs  mdfind.rs  mod.rs  persist.rs
src-tauri/tests/: archive.rs  engine.rs
src/__tests__/: app.test.tsx
src/components/chrome/: ConfirmDialog.tsx  FdaBanner.tsx  StatusBar.tsx  Toasts.tsx  Toolbar.tsx
src/components/info/: GetInfoPanel.tsx
src/hooks/: useKeyboard.ts  useViewportHydration.ts
src/lib/: actions.ts  batchRename.ts  dnd.ts  fileTypes.ts  format.ts  hydration.ts  keyboard.ts  pin.ts  pointerDrag.ts  safeIpc.ts  searchQuery.ts  selection.ts  sort.ts  tags.ts
src/stores/: app.ts  dirSizes.ts  fuzzy.ts  menu.ts  ops.ts  panes.ts  settings.ts  volumes.ts
src/types/: ipc.ts
(+61 files in other folders)
