[package]
name = "fazi"
version = "0.1.0"
description = "Fazi — a keyboard-first macOS file manager"
authors = ["Pascal Roger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fazi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
xattr = "1.6.1"
plist = "1.10.0"
jwalk = "0.8.1"
percent-encoding = "2.3.2"
libc = "0.2.186"
thiserror = "2.0.18"
dashmap = "6.2.1"
uuid = { version = "1.23.4", features = ["v4"] }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
block2 = "0.6.2"
objc2-quick-look-thumbnailing = "0.3.2"
tauri-plugin-drag = "2.1.1"
nucleo-matcher = "0.3"
rayon = "1.12.0"
blake3 = "1.8.5"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

